--- a/src/tableau.css
+++ b/src/tableau.css
@@ -50,7 +50,7 @@ table.stats thead th.asc::after {
 table.stats thead th.desc::after {
   content: "C";
 }
-table.stats thead th:not(:hover)::after {
+table.stats thead th:not(:hover):not(.asc):not(.desc)::after {
   opacity: 0.5;
 }
 table.stats th[scope=row] {
